--- a/hearth/sass/media.sass
+++ b/hearth/sass/media.sass
@@ -17,6 +17,7 @@
 
 @media screen and ( max-width: 1030px )
     .banner
+        overflow: hidden
         &__bg
             top: 40%
         &__logo
@@ -184,9 +185,14 @@
 
 @media screen and ( max-width: 800px )
     .advantages
+        padding: 20px 0px
         &__wrap
             justify-items: center
             grid-template-columns: repeat(2, 1fr)
+
+    .reviews
+        padding-top: 30px
+        padding-bottom: 30px
 
 @media screen and ( max-width: 720px )
     .section
