--- a/hearth/sass/media.sass
+++ b/hearth/sass/media.sass
@@ -39,6 +39,9 @@
             width: 60vw
             height: 100%
 
+    .scroll-to-top
+        right: 10%
+
     .products
         &__wrap
             grid-template-columns: repeat(2, 1fr)
@@ -318,6 +321,9 @@
                 height: 4px
         &__text
             display: none
+
+    .scroll-to-top
+        bottom: 30px
 
     .example
         &__img
