--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -397,7 +397,7 @@ section
             max-width: 800px
         .swiper-slide
             max-width: 800px
-            height: 600px
+            min-height: 600px
     &__img
         width: 100%
         height: 100%
