--- a/hearth/sass/style.sass
+++ b/hearth/sass/style.sass
@@ -30,7 +30,15 @@ body
 
 h1, h2, h3, h4, h5
     &, &>*
+        font-weight: bold
         font-family: 'Raleway', 'Open Sans', sans-serif
+    a:hover
+        text-decoration: underline
+
+p, span
+    &:not(.pair__card) a
+        &:hover
+            color: $text_yellow
 
 section
     position: relative
@@ -50,6 +58,8 @@ section
         padding: 10px
         border-radius: 30px
         display: inline-block
+    &_tac
+        text-align: center
     &_ttu
         text-transform: uppercase
     &_bold
@@ -116,6 +126,12 @@ button.button, span.button, a.button
         font-weight: 600
         margin-top: -5px
         margin-left: 25px
+        &:hover
+            color: #000
+            box-shadow: 0 0 0 1px #c36f21
+            background-color: #c36f21b0
+            &::after
+                background-image: url(../img/icons/cart_tovar.svg)
         &::after
             content: ''
             display: inline-block
@@ -137,7 +153,12 @@ button.button, span.button, a.button
         font-weight: bold
         font-size: 14px
         margin-top: 20px
+        &:hover
+            background-color: #fff
+            box-shadow: 0 0 0 1px $text_yellow
     &_colored
+        &:hover
+            color: #000
         &::after
             display: none
     &_product
@@ -173,6 +194,9 @@ button.button, span.button, a.button
         background-color: $text_yellow
         border-radius: 40px
         padding: 15px 20px
+        &:hover
+            background-color: #fff
+            box-shadow: 0 0 0 1px $text_yellow
     &_all
         color: #000
         background-color: #fff
@@ -194,6 +218,9 @@ button.button, span.button, a.button
         text-align: center
         padding: 10px 30px
         border-radius: 30px
+        &:hover
+            box-shadow: 0 0 0 1px #000
+            background-color: #00000086
     &_order
         background-color: $text_yellow
         font-size: 14px
@@ -202,6 +229,10 @@ button.button, span.button, a.button
         padding: 12px 20px
         border-radius: 30px
         margin-top: 10px
+        transition: all .3s ease-out 0s
+        &:hover
+            box-shadow: 0 0 0 1px $text_yellow
+            background-color: #fff
 
 span.button
     &_recall
@@ -218,10 +249,13 @@ span.button
     top: -1px
     width: 100%
     z-index: 1000
+    transition: opacity 0s ease-out 0s
     & + *
         margin-top: 117px
     &.active
         background-color: #000
+        & ~ .aside
+            // top: 0
         .header__logo
             opacity: 1
             visibility: visible
@@ -540,6 +574,7 @@ span.button
     &.active
         transform: translateY(0%)
     &__container
+        justify-items: center
         display: grid
         grid-template-columns: 1fr 1fr
         grid-gap: 40px 20px
@@ -550,7 +585,6 @@ span.button
         font-size: 28px
         color: #fff
         display: inline-block
-        margin-bottom: 30px
     &__subtitle
         font-weight: bold
         font-size: 22px
@@ -559,6 +593,8 @@ span.button
         display: inline-block
         & ~ *
             padding-left: 20px
+    &__section
+        min-width: 270px
     &__list
         list-style-type: none
     &__link
@@ -601,6 +637,7 @@ span.button
         &__contacts
             max-width: 270px
             align-items: flex-start
+            margin-right: 0
         &__time
             margin-left: 0
             color: #fff
@@ -744,17 +781,15 @@ span.button
                 transform: scaleX(1)
 
 .aside
-    position: absolute
+    position: fixed
     left: 0
     z-index: 4
-    top: 117px
-    height: 98%
+    top: 116px
+    height: 100vh
     width: 90px
     background-color: #F7C76C
     padding-top: 0
-    &__container
-        position: sticky
-        top: 116px
+    transition: top 0s ease-out 0s
     &__icon
         height: 45px
     &__items
@@ -803,14 +838,23 @@ span.button
     background-position: center
     &__bg
         position: absolute
-        top: 50%
-        left: 60%
+        top: 46%
+        left: 58%
+        height: 120%
         transform: translate(-50%, -50%)
+        &-container
+            position: absolute
+            overflow: hidden
+            left: 0
+            top: 0
+            width: 100%
+            height: 100%
+            z-index: 0
         &-m
             position: absolute
             display: none
     &__content
-        padding: 60px 0px 130px
+        padding: 30px 0px 90px
         position: relative
     &__logo
         position: absolute
@@ -833,7 +877,7 @@ span.button
         color: #fff
         font-size: 40px
         font-weight: 600
-        max-width: 330px
+        max-width: 340px
         line-height: 48px
         letter-spacing: 2px
     .header
@@ -895,6 +939,8 @@ span.button
             border-bottom: 1px solid #e8e8e8
     &__icon
         margin-right: 25px
+        width: 44px
+        height: 44px
     &__text
         font-size: 18px
         line-height: 24px
@@ -918,6 +964,8 @@ span.button
             box-shadow: 0 0 0 2px #fff
             opacity: 1
             position: relative
+            &:focus
+                outline: none
             &::before
                position: absolute
                content: ''
@@ -931,6 +979,8 @@ span.button
                height: 15px
 
         .swiper-pagination-bullet.swiper-pagination-bullet-active
+            &:focus
+                outline: none
             &::before
                width: 6px
                height: 6px
@@ -1243,7 +1293,8 @@ span.button
             background-color: #ECEEEC
             appearance: none
             display: inline-block
-            width: 100%
+            min-width: 2em
+            display: inline-block
             text-align: center
             padding: 10px 0px
             font-size: 12px
@@ -1310,7 +1361,11 @@ span.button
             opacity: 1
             position: relative
             display: inline-block
+            &:focus
+                outline: none
         .swiper-pagination-bullet-active
+            &:focus
+                outline: none
             height: 11px
             width: 11px
             box-shadow: 0 0 0 2px $text_yellow
@@ -1400,10 +1455,12 @@ span.button
             font-weight: bold
             text-decoration: underline
     &__img
+        flex-shrink: 0
     &_reverse
         padding-top: 30px
         flex-direction: row-reverse
         background-color: #F9F9F9
+        padding-bottom: 25px
     & + &
         margin-top: 50px
 
@@ -1558,6 +1615,84 @@ span.button
             background-color: transparent
             svg
                 fill: $text_yellow
+
+.popup
+    &__wrapper
+        position: fixed
+        z-index: 1000
+        background-color: rgba(0, 0, 0, .7)
+        right: 0
+        top: 0
+        left: 0
+        bottom: 0
+        padding: 0px 10px
+        display: flex
+        align-items: center
+        justify-content: center
+        overflow-y: auto
+        opacity: 0
+        visibility: hidden
+        &.active
+            opacity: 1
+            visibility: visible
+            .popup__body
+                transform: translateY(0px)
+                opacity: 1
+                visibility: visible
+    &__close
+        position: absolute
+        right: 10px
+        top: 10px
+        display: inline-block
+        height: 40px
+        width: 40px
+        cursor: pointer
+        &:hover
+            &::after, &::before
+                width: 28px
+        &::after, &::before
+            content: ''
+            display: inline-block
+            width: 25px
+            height: 1px
+            top: 50%
+            left: 50%
+            transform: translate(-50%, -50%)
+            background-color: #333
+            position: absolute
+            border-radius: 2px
+        &::after
+            transform: translate(-50%, -50%) rotate(-45deg)
+        &::before
+            transform: translate(-50%, -50%) rotate(45deg)
+            
+    &__body
+        position: relative
+        max-width: 600px
+        background-color: #fff
+        padding: 50px 30px
+        margin: 10px 0px
+        transform: translateY(-20px)
+        opacity: 0
+        visibility: hidden
+    &__container
+        display: flex
+        flex-direction: column
+        align-items: center
+        .button_promo
+            width: 100%
+            max-width: 300px
+    &__input
+        border-radius: 40px
+        background-color: #e8e8e8
+        font-size: 16px
+        padding: 20px 25px
+        text-align: center
+        display: inline-block
+        width: 100%
+        max-width: 300px
+        & + &
+            margin-top: 15px
 
 //
 //
@@ -1790,6 +1925,9 @@ span.button
             font-size: 18px
     &__tel
         position: relative
+        display: flex
+        flex-direction: column
+        align-items: flex-start
         &::before
             content: ''
             margin-right: 10px
@@ -1816,7 +1954,21 @@ span.button
             font-weight: bold
             font-size: 18px
             color: #000
-            display: block
+            position: relative
+            display: inline-block
+            &::after
+                content: ''
+                position: absolute
+                width: 100%
+                height: 2px
+                background-color: #000
+                bottom: 0
+                left: 0
+                transform: scaleX(0)
+                transform-origin: left
+            &:hover
+                &::after
+                    transform: scaleX(1)                    
     &__smalltext
         font-size: 13px
         color: #000
@@ -2111,11 +2263,15 @@ span.button
         .swiper-pagination-bullet + .swiper-pagination-bullet
             margin-left: 10px
         .swiper-pagination-bullet
+            &:focus
+                outline: none
             background-color: #9fa3af
             height: 12px
             width: 12px
             opacity: 1
         .swiper-pagination-bullet-active
+            &:focus
+                outline: none
             background-color: $text_yellow
             height: 12px
             width: 12px
