--- a/hearth/sass/media.sass
+++ b/hearth/sass/media.sass
@@ -86,8 +86,9 @@
 
     .banner
         &__bg
-            height: 80%
-            left: 70%
+            width: 100%
+            height: auto
+            left: 60%
         &__logo
             height: 300px
             width: 400px
