--- a/dacha-project/css/fonts.css
+++ b/dacha-project/css/fonts.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=fonts.css.map */
+@font-face{font-family:"Oswald";src:url("../fonts/Oswald-Regular.ttf") format("truetype");font-style:normal;font-weight:400}
+/*# sourceMappingURL=fonts.css.map */
