--- a/dacha-project/sass/media.sass
+++ b/dacha-project/sass/media.sass
@@ -1,3 +1,8 @@
+@media screen and ( max-width: 1700px )
+    .about
+        &__desk
+            top: 500px
+    
 @media screen and ( max-width: 1500px )
     .compare
         &__tree
@@ -10,6 +15,27 @@
         &__niples
             max-width: 200px
     
+@media screen and ( max-width: 1400px )
+    .about
+        &__bg
+            &_1
+                display: none
+            &_2
+                display: block
+        &__container
+            margin-top: 360px
+        &__desk
+            display: none
+        &__oleg
+            left: 80%
+            display: block
+            &-name
+                bottom: 160px
+                right: 0
+            &-text
+                bottom: 121px
+                right: 0
+
 @media screen and ( max-width: 1300px )
     .compare
         &__hummer
@@ -37,12 +63,18 @@
         padding-bottom: 50px
 
     .notype
+        &__bg
+            display: none
+        &__oleg
+            display: block
         &__card
             padding:  40px 0
             &::before
                 left: 0
 
     .how
+        &__item:last-child
+            margin: 20px
         &__item::after
             display: none !important
 
@@ -68,6 +100,12 @@
             &.ml
                 margin-left: 0
 
+@media screen and ( max-width: 1000px )
+    .reports
+        &__swiper
+            margin: 40px auto 0px
+            max-width: 275px
+
 @media screen and ( max-width: 940px )
     .examples
         &__container
@@ -76,13 +114,25 @@
     .portfolio
         margin-top: 60px
         &__container
+            margin-bottom: 10px
             .swiper-slide
                 min-height: 300px
 
+    .banner
+        background-position: 30% 120px
+        background-size: auto 97%
+        background-repeat: no-repeat 
+        &__body
+            padding: 200px 0px
+
     .about
+        margin-top: 40px
+        &__bg
+            width: 320%
         &__container
-            margin: 90px auto 0px
+            margin: 360px auto 0px
         &__garantee
+            margin-top: 40px
             flex-direction: column
             align-items: center
             &-body
@@ -93,9 +143,22 @@
                 width: 100%
                 text-align: center
 
+    .no-adaptiv
+        text-align: left
+
     .materials
+        &__download
+            display: block
         &__table, &__niples
             display: none
+
+    .benefits
+        &__bg
+            left: 50%
+            transform: translateX(-50%)
+            width: 200%
+            bottom: auto
+            top: 0
 
     .quiz
         &__img
@@ -103,10 +166,68 @@
         &__body
             flex-basis: 100%
             padding: 0px 20px
+        &__page:last-child
+            
         &__container
-            min-height: 720px
+            min-height: 800px
+    .banner
+        &__info
+            margin: 40px 0px
+
+    .advantages
+        .section__title
+            text-align: left
+
+    .questions
+        padding-bottom: 50px
+        &__bg
+            display: none
+        &__oleg
+            display: block
+            margin: 40px auto 0px
+            max-width: 400px
+            width: 100%
+        &__socials
+            flex-direction: column
+            align-items: flex-start
+        &__social
+            flex-direction: row-reverse
+            & + &
+                margin-top: 30px
+        &__title
+            text-align: left
+        &__link
+            height: 75px
+            width: 75px
+            margin-right: 20px
+            svg
+                max-width: 30px
+        &__small-card
+            padding: 0
+            box-shadow: none
+            margin: 15px 0px
+        &__card
+            margin-top: 50px
+            box-shadow: none
+            flex-direction: column
+            align-items: flex-start
+            padding: 0
+            .header__tel
+                margin: 20px 0px
+
+    .how
+        &__btn
+            &-wrap
+                margin-top: 20px
 
     .compare
+        .section__title, &__subtitle
+            text-align: left
+        &__subtitle
+            font-weight: 300
+        &__icon
+            height: 40px
+            width: 40px
         &__container
             flex-direction: column
             align-items: center
@@ -125,6 +246,7 @@
             margin-top: 30px
 
     .count
+        padding: 60px 0px
         &__book
             left: 0
         &__circle
@@ -134,12 +256,20 @@
                 display: none
 
     .reports
+        &__bg
+            top: 30%
         &__tel
             flex-direction: column
             align-items: center
         &__subtext
             margin-top: 20px
             margin-left: 0
+
+    .gift
+        & + &
+            margin-top: 30px
+        &__img
+            width: 80px
 
     .logo
         display: flex
@@ -169,7 +299,31 @@
             margin-top: 15px
             margin-left: 0
         &__input:last-child
-            margin-bottom: 20px            
+            margin-bottom: 20px
+
+    .footer
+        &__wrap
+            flex-direction: column
+        &__col
+            order: 0
+            a.footer__text
+                text-decoration: underline
+            & + &
+                margin-top: 20px
+            .button
+                display: none
+            &:nth-child(2)
+                order: 3
+            &:nth-child(3)
+                display: none
+            &:last-child
+                order: 1
+                align-items: flex-start
+                .footer__text:first-of-type
+                    margin: 0
+        .header
+            &__contacts
+                display: none
 
 @media screen and ( max-width: 640px )
     .logo
@@ -189,13 +343,35 @@
             grid-template-columns: repeat(2, 1fr)
     
     .about
+        &__oleg
+            left: 50%
+            width: 100%
+            img
+                max-width: 220px
+                margin: 0 auto
+                display: block
+                width: 100%
         &__team
             grid-template-columns: repeat(2, 1fr)
         &__body
             padding: 30px
 
-    .error__container
-        display: none
+    .error
+        &__container
+            margin-bottom: 20px
+            .swiper-wrapper
+                max-height: none
+                margin: 0
+                flex-direction: row
+                flex-wrap: nowrap
+        &__controls
+            display: flex
+        &__item
+            padding: 20px
+            max-width: none
+            margin: 0
+            &-title
+                margin-bottom: 20px
 
     .house
         &__card
@@ -210,6 +386,7 @@
     
     .addons
         &__container
+            margin-top: 30px
             flex-direction: column
             align-items: flex-start
 
@@ -300,12 +477,18 @@
             width: 70px
 
     .about
+        &__saw
+            display: none
+        &__glass
+            display: none
         &__team
             justify-items: center
             grid-template-columns: repeat(1, 1fr)
         &__body
             padding: 10px
         &__garantee
+            &-img
+                max-width: 125px
             &-subtitle
                 font-size: 16px
                 line-height: 22px
@@ -313,7 +496,7 @@
 
     .button
         &_notype
-            font-size: 15px
+            font-size: 14px
             padding: 20px 15px
 
     .portfolio
