--- a/hearth/sass/fonts.sass
+++ b/hearth/sass/fonts.sass
@@ -1,8 +1,20 @@
-@font-face
+// @font-face
+//     font-family: "Raleway"
+//     src: url(../fonts/Raleway-Bold.ttf) format("truetype")
+//     font-weight: bold
+//     font-style: normal
+
+@font-face 
     font-family: "Raleway"
-    src: url(../fonts/Raleway-Bold.ttf) format("truetype")
-    font-weight: bold
     font-style: normal
+    font-weight: bold
+    src: url('../fonts/cyrillic-Raleway-Bold.eot')
+    src: url('../fonts/cyrillic-Raleway-Bold.eot#iefix') format('embedded-opentype')
+    src: url('../fonts/cyrillic-Raleway-Bold.woff2') format('woff2')
+    src: url('../fonts/cyrillic-Raleway-Bold.woff') format('woff')
+    src: url('../fonts/cyrillic-Raleway-Bold.ttf') format('truetype')
+    // src: url('../fonts/cyrillic-Raleway-Bold.otf') format('opentype')
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116
 
 @font-face
     font-family: "Open Sans"
