--- a/hearth/sass/style.sass
+++ b/hearth/sass/style.sass
@@ -31,7 +31,7 @@ body
 h1, h2, h3, h4, h5
     &, &>*
         font-weight: bold
-        font-family: 'Raleway', 'Open Sans', sans-serif
+        font-family: 'Raleway', sans-serif !important
     a:hover
         text-decoration: underline
 
@@ -495,7 +495,11 @@ span.button
     &__img
         width: 100px
         height: 80px
-        object-fit: cover
+        overflow: hidden
+        *
+            height: 100%
+            width: 100%
+            object-fit: contain
     &__info
         margin-left: 10px
         &-top
@@ -1216,7 +1220,10 @@ span.button
         max-height: 260px
     &__img
         height: 100%
-        object-fit: cover
+        *
+            object-fit: cover
+            height: 100%
+            width: 100%
     &__art, &__rev
         position: absolute
         z-index: 3
@@ -1428,7 +1435,10 @@ span.button
     &__img
         width: 100%
         height: 165px
-        object-fit: cover
+        *
+            width: 100%
+            
+            object-fit: cover
         &-wrap
             width: 100%
             max-width: 165px
