--- a/dacha-project/sass/style.sass
+++ b/dacha-project/sass/style.sass
@@ -463,6 +463,9 @@ h1, h2, h3, h4, h5
         .swiper-slide
             max-width: 800px
             min-height: 600px
+            &:not(.swiper-slide-active)
+                opacity: .7
+                
     &__img
         width: 100%
         height: 100%
